[package]
name = "pmdl"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
win32console = "0.1.5"
bcrypt = "0.15.0"
winapi = "0.3.9"
hex = "0.4.3"
rpassword = "7.3.1"
rusqlite = "0.30.0"
